# serde-more

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release-plz.yml
serde_more/: CHANGELOG.md  Cargo.toml
serde_more/src/: lib.rs
serde_more_derive/: CHANGELOG.md  Cargo.toml  README.md
serde_more_derive/src/: lib.rs
src/: lib.rs
tests/: serialize_more.rs
