[workspace]
members = ["serde_more", "serde_more_derive"]
resolver = "2"

[workspace.package]
version = "0.1.3"
authors = ["Jagoda Estera Ślązak <jslazak@jslazak.com>"]
license = "MIT OR Apache-2.0"
edition = "2024"
repository = "https://github.com/j-g00da/serde-more"

[workspace.dependencies]
serde = "1"
quote = "1"
proc-macro2 = "1"
syn = "2"
serde_json = "1"
testresult = "0.4"
rstest = "0.26"
serde_with = "3"
