[package]
name = "serde_more"
description = "Procedural macro to add arbitrary data when serializing using serde"
categories = ["encoding", "no-std", "no-std::no-alloc"]
keywords = ["serde", "serialization"]
readme = "../README.md"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_more_derive = { path = "../serde_more_derive", version = "0.1.3" }

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
testresult.workspace = true
rstest.workspace = true
serde_with = { workspace = true, features = ["macros", "hex"] }
